# archism

./: 0-auto-install.sh  1-arch-setup.sh  README.md
app/: Cargo.toml
app/crates/config/: Cargo.toml
app/crates/config/src/: lib.rs
app/crates/constants/: Cargo.toml
app/crates/constants/src/: lib.rs
app/crates/install/: Cargo.toml
app/crates/install/src/: lib.rs
app/crates/state/: Cargo.toml
app/crates/state/src/: lib.rs
app/crates/ui/: Cargo.toml
app/crates/ui/src/: lib.rs
app/crates/wifi/: Cargo.toml
app/crates/wifi/src/: lib.rs
app/src/: main.rs
docs/: ARCH_BOOT_USB.md
gui/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  index.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
post-installation/: apps-setup.sh  ufw-setup.sh
